# goit-pythonweb-hw-01

./: .gitignore  pyproject.toml
solutions/: factory.py  solid.py
